--- a/registration/style.css
+++ b/registration/style.css
@@ -1,17 +1,49 @@
+/*------Colors registration----------*/
+
+:root {
+    --bg-color-section: #FAFAFA;
+    --bg-comments-color: #f4f1f1;
+    --bg-color: #FFF;
+    --text-color: #22262A;
+    --text-color-in-user-agreement: #22262A;
+    --text-error-color: #fc6262;
+    --text-red-color: #FF5634;
+    --white-color: #FFF;
+    --svg-logo-text-color: #121212;
+}
+
+/*-------------Dark Theme--------------*/
+
+.dark {
+    --bg-color-section: #344756;
+    --bg-comments-color: #DADADA;
+    --bg-color: #2D384A;
+    --text-color: #f3efef;
+    --white-color: #000218;
+    --svg-logo-text-color: #FFF;
+}
+
+
 /*--------Basic styles-------*/
 
-html{
+html {
     font-size: 10px;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+    background-color: var(--bg-color);
 }
 
-label{
+body.lock{
+    overflow-y: hidden;
+}
+
+label {
     text-transform: uppercase;
     font-size: 16px;
+    color: var(--text-color);
 }
 
 h1 {
@@ -19,26 +51,7 @@ h1 {
     text-transform: uppercase;
     padding-bottom: 5px;
     border-bottom: 3px solid #22262A;
-    color: #22262A;
-}
-
-#registration_form {
-    margin: 0 auto;
-    background: #E7F5F8;
-    width: 700px;
-    padding: 20px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
-    margin: 20px auto;
-}
-
-:root {
-    --bg-color-section: #FAFAFA;
-    --bg-comments-color: #DADADA;
-    --bg-color: #FFF;
-    --text-color: #22262A;
-    --text-error-color: #fc6262;
-    --text-red-color: #FF5634;
-    --white-color: #FFF;
+    color: var(--text-color);
 }
 
 .flex {
@@ -57,7 +70,7 @@ input {
     border: none;
     font-size: 18px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
-    color: var(--text-color);
+    color:#22262A;
     padding-left: 15px;
 }
 
@@ -65,6 +78,66 @@ input:focus {
     border: 2px solid #22262A;
 }
 
+button {
+    padding: 1em 2em;
+    margin: 1em;
+    border: 1px solid #ededed;
+    background-color: transparent;
+    border-radius: .75rem;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.6em;
+    color: var(--text-color);
+    transform-origin: center center;
+    transition: 240ms ease-out;
+    text-align: center;
+    white-space: nowrap;
+}
+
+button:hover {
+    transform: scale(1.05);
+    background-color: var(--text-red-color);
+    color: var(--white-color);
+}
+
+/*-------Full screen logo-------*/
+
+#splash-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+#splash-screen.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
+svg path:nth-child(4) {
+    fill: var(--svg-logo-text-color);
+}
+
+/*------Registration form---------*/
+
+#registration_form {
+    margin: 0 auto;
+    background: var(--bg-color-section);
+    width: 700px;
+    padding: 20px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    margin: 20px auto;
+}
+
+/*-------Input div, group and input-----*/
 
 .group {
     margin: 10px;
@@ -86,6 +159,10 @@ div.label_text {
     position: relative;
 }
 
+.input_fields {
+    width: 300px;
+}
+
 /*--------Error styles--------*/
 
 .field_error {
@@ -98,51 +175,51 @@ div.label_text {
     font-weight: 400;
 }
 
-.input_fields {
-    width: 300px;
-}
-
-
+/*-------Button password eye------*/
 
 .btn_password {
     position: absolute;
     width: 40px;
     height: auto;
     right: 5px;
-    top: 5px;
-    background-color: white;
     border: none;
     border-radius: 20px;
     opacity: .4;
     cursor: pointer;
+    padding: 0;
+    margin: 0;
 }
 
 .btn_password.active_password_btn {
     opacity: 1;
 }
 
-.random_btn {
-    cursor: pointer;
-    margin-top: 20px;
-    background-color: var(--text-color);
-    color: var(--white-color);
-    height: 40px;
-    width: 200px;
-    text-align: center;
-    text-decoration: uppercase;
-    font-size: 14px;
-    border-radius: 5px;
+.btn_password:hover{
+    transform: none;
+    background-color: transparent;
 }
 
+
+/*------Random generate button------*/
+
+.random_btn {
+    padding: 0;
+    height: 55px;
+    width: 200px;
+    background-color: var(--white-color);
+    color: var(--text-color);
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+/*-------Registration button--------*/
+
 .registration {
-    cursor: pointer;
     padding: 10px 30px;
     height: 55px;
-    background-color: #22262A;
-    color: var(--white-color);
+    background-color: var(--white-color);
+    color: var(--text-color);
     text-align: center;
-    text-decoration: uppercase;
-    font-size: 18px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
@@ -151,19 +228,29 @@ div.label_text {
     cursor: pointer;
 }
 
-/* button.registration:hover {
-    opacity: .8;
-    font-weight: bold;
-    transform: scale(1.1);
-} */
 
 button.registration:disabled {
-    background-color: #cccccc; /* Серый цвет фона */
-    color: #666666; /* Серый цвет текста */
-    cursor: not-allowed; /* Указатель мыши при наведении */
-    opacity: 0.6; /* Уменьшаем прозрачность */
-  }
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
 
+/*----User agremeent link-----*/
+
+.license{
+    margin: auto 0;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    color: var(--text-color);
+}
+
+.license:hover{
+    text-decoration: underline;
+}
+
+/*-------Modal-------*/
 
 .modal_overlay {
     position: fixed;
@@ -180,15 +267,17 @@ button.registration:disabled {
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease-in-out;
+    /* overflow-y: auto; */
 }
 
 .modal {
-    background-color: #FFF;
+    background-color: var(--bg-color);
     width: 500px;
-    height: 500px;
+    height: 550px;
     align-items: center;
     justify-content: center;
     display: none;
+    /* overflow-y: auto; */
 }
 
 
@@ -198,7 +287,7 @@ button.registration:disabled {
     transition: all 0.3s ease-in-out;
 }
 
-.modal--visible {
+.modal_1--visible {
     display: block;
 }
 
@@ -226,6 +315,24 @@ button.registration:disabled {
     cursor: pointer;
 }
 
+/*------Log In and Go Back buttons-----*/
+
+.log_in_button{
+    background-color: var(--white-color);
+    color: var(--text-color);
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.back_on_previous_page{
+    background-color: var(--white-color);
+    color: var(--text-color);
+    text-align: center;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+/*-------User agreement-------*/
+
 .user_agreement_div {
     display: flex;
     align-items: center;
@@ -239,10 +346,13 @@ button.registration:disabled {
     overflow-y: scroll;
     resize: none;
     border: none;
+    color: var(--text-color-in-user-agreement);
+    background-color: var(--bg-comments-color);
 }
 
 .user_agreement_h2 {
     text-align: center;
+    color: var(--text-color)
 }
 
 .div_checkbox{
@@ -250,7 +360,7 @@ button.registration:disabled {
     margin-top: 5px;
 }
 
-.checkbox-container {
+.checkbox-container, .checkbox-container p {
     display: block;
     position: relative;
     padding-left: 30px;
@@ -261,6 +371,10 @@ button.registration:disabled {
     -ms-user-select: none;
     user-select: none;
     text-transform: none;
+}
+
+.checkbox-container p{
+    padding-left: 0;
 }
 
 /* Скрытие стандартного чекбокса */
@@ -313,12 +427,97 @@ button.registration:disabled {
     transform: rotate(45deg);
 }
 
-.div_btn_agreement{
+.div_btn_agreement {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.btn_agreement{
+.btn_agreement {
     margin-top: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    background-color: var(--white-color);
+    color: var(--text-color);
+}
+
+button.btn_agreement:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+@media (max-width: 768px){
+    #registration_form{
+        max-width: 250px;
+    }
+    .group{
+        flex-direction: column;
+        margin-left: 0;
+    }
+
+    div.label_text{
+        text-align: left;
+        margin-bottom: 10px;
+    }
+
+    input{
+        width: 230px;
+        height: 30px;
+        font-size: 14px;
+    }
+
+    label{
+        font-size: 14px;
+    }
+
+    .authorisation{
+        font-size: 16px;
+    }
+
+    button{
+        font-size: 1.4em;
+    }
+
+    .btn_password{
+        width: 30px;
+        right: -5px;
+    }
+
+    .random_btn{
+        width: 150px;
+        height: 40px;
+        padding: 0;
+        margin-left: 0;
+    }
+
+    .registration{
+        width: 170px;
+        height: 50px;
+        margin: 10px auto;
+        margin-bottom: 30px;
+    }
+
+    .log_in_button, .back_on_previous_page{
+        width: 150px;
+        height: 40px;
+        margin: 10px auto;
+        padding: 0;
+    }
+    .log_in_button{
+        margin-top: 30px;
+    }
+
+    .license{
+        margin: 0 auto;
+    }
+
+    .modal{
+        width: 300px;
+        height: 550px;
+    }
+
+    .checkbox-container{
+        font-size: 14px;
+    }
 }
