--- a/admin_panel/styles.css
+++ b/admin_panel/styles.css
@@ -1,10 +1,42 @@
+/*------Colors admin----------*/
+
+:root {
+    --bg-color-section: #FAFAFA;
+    /* --bg-comments-color: #DADADA; */
+    --bg-color: #FFF;
+    --text-color: #22262A;
+    --text-error-color: #fc6262;
+    --text-red-color: #FF5634;
+    --white-color: #FFF;
+    --bg-table: #f2f2f2;
+    --color-table: rgb(231, 230, 230);
+    --svg-logo-text-color: #121212;
+    --text-gray-color: #656565;
+}
+
+/*-------------Dark Theme--------------*/
+
+.dark{
+    --bg-color-section: #344756;
+    --bg-table: #DADADA;
+    --bg-color: #2D384A;
+    --text-color: #FFF;
+    --white-color: #000218;
+    --color-table: whitesmoke;
+    --svg-logo-text-color: #FFF;
+    --text-gray-color: #D2D2D2;
+}
+
+
+
 html{
     font-size: 10px;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+    background-color: var(--bg-color);
 }
 
 
@@ -13,8 +45,8 @@ h1 {
     margin: 10px 20px;
     text-transform: uppercase;
     padding-bottom: 5px;
-    border-bottom: 3px solid #22262A;
-    color: #22262A;
+    border-bottom: 3px solid var(--text-color);
+    color: var(--text-color);
     text-align: center;
 }
 
@@ -27,11 +59,17 @@ button {
     cursor: pointer;
     display: inline-block;
     font-size: 1.6em;
-    color: var(--bg-color-section);
+    color: var(--text-color);
     transform-origin: center center;
     transition: 240ms ease-out;
     text-align: center;
     white-space: nowrap;
+}
+
+button:hover {
+    transform: scale(1.05);
+    background-color: var(--text-red-color);
+    color: var(--white-color);
 }
 
 .user_info {
@@ -43,9 +81,40 @@ button {
     margin: 20px auto;
 }
 
+h2{
+    text-align: center;
+    font-size: 20px;
+    color: var(--text-color);
+}
+
+svg path:nth-child(4) {
+    fill: var(--svg-logo-text-color);
+}
 
 section {
     padding: 20px;
+}
+
+/*-------Full screen logo-------*/
+
+#splash-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+#splash-screen.hide {
+    opacity: 0;
+    pointer-events: none;
 }
 
 /* Таблица пользователей */
@@ -68,8 +137,12 @@ td {
     border-bottom: 1px solid #ddd;
 }
 
+tbody{
+    background-color: var(--color-table);
+}
+
 th {
-    background-color: #f2f2f2;
+    background-color: var(--bg-table);
 }
 
 footer {
@@ -112,6 +185,7 @@ h4 {
 
 .div_deliver_x_dowload {
     margin-bottom: 6.7em;
+    /* flex-direction: column; */
 }
 
 
@@ -126,6 +200,7 @@ h4 {
 
 .logo_deliver_x_with_description {
     max-width: 45em;
+    /* text-align: center; */
 }
 
 .rectangle_with_buttons_in_deliver_x {
@@ -134,27 +209,12 @@ h4 {
     justify-content: center;
     gap: 16px;
     align-items: center;
-    width: 485px;
 
 }
 
-.button_dowload_for_ios {
-    text-align: center;
-    font-size: 1.6em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px;
-    margin: 0.5em 0;
-    padding: 1.4em 2.6em;
-}
-
-.button_dowload_app_for_android {
-    padding: 1.4em 2.6em;
-    text-align: center;
-    font-size: 1.6em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px
+div.horisontal_line {
+    background: #CACACA;
+    height: 1px;
 }
 
 .black_name_in_footer {
@@ -176,13 +236,82 @@ h4 {
     margin: 0 .5em
 }
 
-div.horisontal_line {
-    background: #CACACA;
-    height: 1px;
-}
-
 .end_info {
     text-align: center;
     margin-top: 2.7em;
 }
 
+
+/*------Search items-----*/
+
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.input-group {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 400px;
+}
+
+.input-field {
+    padding: 10px 15px;
+    padding-right: 100px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+    outline: none;
+    width: 100%;
+    transition: border-color 0.3s ease;
+}
+
+.input-field:focus {
+    border-color: #ff6633;
+}
+
+.submit-button {
+    position: absolute;
+    right: 10px;
+    padding: 5px 8px;
+    margin: 0;
+    margin-top: auto;
+    border: none;
+    border-radius: .75rem;
+    display: block;
+    font-size: 14px;
+    color: black;
+    transform-origin: center center;
+    transition: 0.2s;
+    text-align: center;
+    white-space: nowrap;
+    font-weight: 400;
+    cursor: pointer;
+    background-color: #fff;
+}
+
+.submit-button:hover{
+    transform: scale(1.2);
+}
+
+@media (max-width: 768px){
+    .div_deliver_x_dowload{
+        flex-direction: column;
+    }
+
+    .logo_deliver_x_with_description{
+        text-align: center;
+        margin: 10px auto;
+    }
+
+    footer{
+        padding: 0;
+    }
+
+    .input-field{
+        font-size: 14px;
+    }
+}
