--- a/orders/css/basket.css
+++ b/orders/css/basket.css
@@ -1,30 +1,109 @@
-@import url("./fonts.css");
+/*------Colors catalog----------*/
 
-html{
+:root {
+    --bg-color-section: #FAFAFA;
+    --bg-comments-color: #DADADA;
+    --bg-color: #FFF;
+    --text-color: #22262A;
+    --text-error-color: #fc6262;
+    --text-red-color: #FF5634;
+    --search-border-color: #ff6633;
+    --white-color: #FFF;
+    --svg-logo-text-color: #121212;
+}
+
+/*-------------Dark Theme--------------*/
+
+.dark {
+    --bg-color-section: #344756;
+    --bg-comments-color: #DADADA;
+    --bg-color: #2D384A;
+    --text-color: #FFF;
+    --white-color: #000218;
+    --svg-logo-text-color: #DADADA;
+}
+
+/*-----Basic styles------*/
+
+.btn_in_dialog_2,
+.btn_in_dialog_1 {
+    padding: 1em 1em;
+    margin: 0;
+    border: 1px solid #ededed;
+    background-color: var(--white-color);
+    border-radius: .75rem;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.6em;
+    color: var(--text-color);
+    transform-origin: center center;
+    transition: 240ms ease-out;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.btn_in_dialog_2:hover,
+.btn_in_dialog_1:hover {
+    transform: scale(1.05);
+    background-color: var(--text-red-color);
+    color: var(--white-color);
+}
+
+dialog{
+    text-align: center;
+}
+
+  dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+html {
     font-size: 10px;
 }
 
-body{
+body {
     margin: 0;
     font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: var(--bg-color);
 }
 
-.wrapper{
+.text_in_dialog{
+    font-size: 16px ;
+}
+
+.wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 850px;
 }
 
 h1 {
     padding: 20px;
+    color: var(--text-color)
 }
 
 .none {
     display: none;
 }
 
-.error{
+/*-----Icons color-----*/
+
+.basket_inner svg path:nth-child(1),
+.go_back_icon path:nth-child(1) {
+    fill: var(--svg-logo-text-color);
+}
+
+svg path:nth-child(4) {
+    fill: var(--svg-logo-text-color);
+}
+
+/*-----Errors-----*/
+
+.error {
     margin: 20px auto;
-    width: 400px;
+    max-width: 250px;
     background-color: #606060;
     color: white;
     font-size: 20px;
@@ -40,17 +119,19 @@ h1 {
     color: white;
 }
 
-.home{
+/*-----Icons styles-----*/
+
+.home {
     position: absolute;
     top: 16px;
     right: 60px;
 }
 
-.basket_inner{
+.basket_inner {
     position: relative;
 }
 
-.basket_count{
+.basket_count {
     position: absolute;
     top: -8px;
     right: -8px;
@@ -62,7 +143,31 @@ h1 {
     min-width: 25px;
 }
 
-.header_icons{
+/*-------Full screen logo-------*/
+
+#splash-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+#splash-screen.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
+/*-----header icons-----*/
+
+.header_icons {
     /* width: 100px; */
     display: flex;
     flex-direction: row;
@@ -70,12 +175,15 @@ h1 {
     gap: 20px;
 }
 
-.cart{
+/*-----Cards-----*/
+
+.cart {
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 20px;
     margin: 20px 0;
+    padding: 0 30px;
 }
 
 .cart_product {
@@ -88,7 +196,7 @@ h1 {
     position: relative;
 }
 
-.cart_del-card{
+.cart_del-card {
     position: absolute;
     top: -10px;
     right: -10px;
@@ -105,15 +213,20 @@ h1 {
 
 .cart_img img {
     width: 100px;
+    padding-right: 20px;
 }
 
-.cart_title{
+.cart_title {
     font-size: 20px;
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 100px;
+    text-align: center;
+    color: var(--text-color);
 }
 
-.cart_block-btns{
+.cart_block-btns {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -122,7 +235,9 @@ h1 {
     column-gap: 10px;
 }
 
-.cart_plus, .cart_count, .cart_minus {
+.cart_plus,
+.cart_count,
+.cart_minus {
     width: 50px;
     display: flex;
     justify-content: center;
@@ -132,15 +247,23 @@ h1 {
     font-size: 20px;
 }
 
-.cart_plus, .cart_minus {
+.cart_count {
+    text-align: center;
+}
+
+.cart_plus,
+.cart_minus {
     cursor: pointer;
 }
 
-.cart_price, .cart_price-discount{
+.cart_price {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
+    font-size: 18px;
+    width: 50px;
+    color: var(--text-color);
 }
 
 .btn-send {
@@ -150,18 +273,81 @@ h1 {
     border-radius: .75rem;
     display: block;
     font-size: 17px;
-    color: black;
+    color: var(--text-color);
     transform-origin: center center;
     transition: 0.2s;
     text-align: center;
     white-space: nowrap;
     font-weight: 400;
-    transition: all 0.3s ;
+    transition: all 0.3s;
+    margin-bottom: 50px;
+    cursor: pointer;
+    background-color: var(--white-color);
 }
 
 .btn-send:hover {
-    border: 1px solid #ff6633;
-    background-color: #ff6633;
+    border: 1px solid var(--text-red-color);
+    background-color: var(--text-red-color);
     color: #fff;
-    transform:scale(1.1);
+    transform: scale(1.1);
+}
+
+
+@media (max-width: 768px) {
+    .cart_title {
+        font-size: 14px;
+    }
+
+    .cart_price {
+        font-size: 14px;
+    }
+
+    .cart_plus,
+    .cart_minus {
+        width: 35px;
+        height: 35px;
+    }
+
+    .cart_count {
+        width: 50px;
+        height: 15px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 500px) {
+    .cart_product {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cart_img img {
+        padding: 0;
+    }
+
+    .cart_title {
+        width: auto;
+        margin: 20px auto;
+    }
+
+    /* .cart_block-btns{
+        flex-wrap: wrap;
+    }
+
+    .cart_minus{
+        order: 2;
+    }
+
+    .cart_plus{
+        order: 3;
+    }
+
+    .cart_count{
+        order: 1;
+        width: 100%;
+        text-align: center;
+    } */
+
+
 }
