--- a/css/styles.css
+++ b/css/styles.css
@@ -381,11 +381,17 @@ header button {
     background-color: var(--bg-color);
     width: 800px;
     height: 600px;
-    padding: 30px;
+    padding: 10px;
     align-items: center;
     justify-content: center;
     z-index: 99999;
     display: none;
+    overflow-y: auto; /* добавляем вертикальную прокрутку */
+    overflow-x: hidden;
+    position: relative; /* делаем модальное окно позиционированным */
+    padding: 40px; /* добавляем внутренние отступы */
+    max-height: 80vh; /* устанавливаем максимальную высоту 80% от viewport */
+    margin: 0 10px;
 }
 
 .modal_overlay--visible {
@@ -413,6 +419,11 @@ header button {
     width: 24px;
     text-decoration: none;
     font-weight: bold;
+}
+
+.close-button-3{
+    top: 0;
+    right: 0;
 }
 
 .close-button:hover,
@@ -1743,6 +1754,7 @@ div.horisontal_line {
         width: 320px;
         height: 400px;
         padding: 30px 0;
+        margin: 0;
     }
 
     .close-button-3{
