--- a/registration/style.css
+++ b/registration/style.css
@@ -273,13 +273,14 @@ button.registration:disabled {
 .modal {
     background-color: var(--bg-color);
     width: 500px;
-    height: 550px;
-    align-items: center;
-    justify-content: center;
+    max-height: 80vh; /* устанавливаем максимальную высоту 80% от viewport */
     display: none;
-    /* overflow-y: auto; */
-}
+    overflow-y: auto; /* добавляем вертикальную прокрутку */
+    position: relative; /* делаем модальное окно позиционированным */
+    padding: 20px; /* добавляем внутренние отступы */
+    margin: 0 10px;
 
+  }
 
 .modal_overlay--visible {
     opacity: 1;
@@ -293,19 +294,20 @@ button.registration:disabled {
 
 .modal_1 {
     position: relative;
+    /* overflow-y: auto; */
 }
 
 .close-button {
     background: #606061;
     color: #FFFFFF;
     line-height: 25px;
-    position: absolute;
-    right: -12px;
     text-align: center;
-    top: -10px;
     width: 24px;
     text-decoration: none;
     font-weight: bold;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .close-button:hover,
