--- a/authorization/style.css
+++ b/authorization/style.css
@@ -144,6 +144,7 @@ input:focus{
     display: flex;
     flex-direction: column;
     position: relative;
+    color: var(--text-color);
 }
 
 .input_fields{
